# hdfparse

./: README.md  install.sh  pyproject.toml
src/hdfparse/: cli.py  io.py  plot.py  util.py
src/hdfparse/conf/: conf.toml
